# great_chip-8

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  README.md
assets/: chip8_font.c8f
include/: chip8.h  chip8_dbg.h  chip8_gfx.h  chip8_inst.h  chip8_io.h  chip8_istr.h
src/: chip8.c  chip8_gfx.c  chip8_input.c  chip8_io.c  chip8_istr.c
src/shaders/: chip8_shader.f.glsl  chip8_shader.v.glsl
tools/: chip8_font_gen.c
